x86 Blender on Apple Silicon doesn't show Cycles Metal GPU render. #126005

Closed
opened 2024-08-07 05:07:00 +02:00 by Alaska · 2 comments
Member

System Information
Operating system: macOS-14.5-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad
Worked: 4.1.1

Short description of error
When using the x86 version of Blender on Apple Silicon, Cycles Metal GPU rendering doesn't work.

This is a major problem for people that download Blender from Steam as it only has the x86 version of Blender.

Exact steps for others to reproduce the error

  • On a Apple Silicon Mac:
  • Download the x86 version of Blender 4.2.0
  • Run it and try to use Cycles Metal GPU rendering in the viewport.
  • Notice that the Cycles render isn't visible in the viewport.
  • Test with Blender 4.1.1 and notice it works.
**System Information** Operating system: macOS-14.5-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken version: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: `a51f293548ad` Worked: 4.1.1 **Short description of error** When using the x86 version of Blender on Apple Silicon, Cycles Metal GPU rendering doesn't work. This is a major problem for people that download Blender from Steam as it only has the x86 version of Blender. **Exact steps for others to reproduce the error** - On a Apple Silicon Mac: - Download the x86 version of Blender 4.2.0 - Run it and try to use Cycles Metal GPU rendering in the viewport. - Notice that the Cycles render isn't visible in the viewport. - Test with Blender 4.1.1 and notice it works.
Alaska added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-08-07 05:07:01 +02:00
Author
Member

I can look into bisecting this later.

I can look into bisecting this later.
Author
Member

Bisecting points to e67c95c8c4

CC @Sergey just so you know about it.

Bisecting points to e67c95c8c4a0e72c24030ce12ba6a6011271a6a0 CC @Sergey just so you know about it.
Sergey Sharybin self-assigned this 2024-08-08 12:33:49 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-08 16:01:43 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126005
No description provided.